--- a/Update.html
+++ b/Update.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="./imgs/fav.png">
     <title>Update Log</title>
+    <script src="./js/DOMElements.js"></script>
     <style>
         html{
             font-family: Arial, Helvetica, sans-serif;
@@ -79,6 +80,7 @@
                 <li><a href="#1.4.6">1.4.6</a></li>
             </ul>
             <li><a href="#1.5">1.5</a></li>
+            <li><a href="#1.6">1.6</a></li>
         </ul>
     </ul>
     </div>
@@ -86,6 +88,30 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.6">
+        <h2 class="version-num">1.6</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>&lt;c-cursive>cursive text&lt;c-cursive></li>
+            <ul>
+                <li><c-cursive>text</c-cursive></li>
+            </ul>
+            <li>&lt;c-midieval>midieval text&lt;c-midieval></li>
+            <ul>
+                <li>
+                    <c-midieval>text</c-midieval>
+                </li>
+            </ul>
+            <li>&lt;c-hollow>hollow text&lt;c-hollow></li>
+            <ul>
+                <li>
+                    <c-hollow>text</c-hollow>
+                </li>
+            </ul>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.5">
         <h2 class="version-num">1.5</h2>
         <h3 class="added">Additions</h3>
