--- a/index.html
+++ b/index.html
@@ -326,17 +326,13 @@
         </div>
         <div id="emojis" class="bar-section">
             <fieldset>
-                <input id="unicode-character-copy-area" value="&#12484;" type="text" style="width:1px;height:0;background-color: transparent;color: transparent;border-color: transparent;border-style: none;">
-                <label title="copy to clipboard"><input type="number" value="12484" oninput="document.getElementById('unicode-character').textContent = String.fromCodePoint(this.value)" style="width:90px" title="unicode character value"><label id="unicode-character" style="padding:5px;border:1px inset black;background-color:white;color:black;cursor: pointer;" onclick="let copyArea = document.getElementById('unicode-character-copy-area');copyArea.value=this.textContent;copyArea.select();document.execCommand('copy');">&#12484;</label></label>
-                <span class="divider"></span>
                 <label>
-                    Custom emoji
                     <input type="text" title="Custom emoji name" id="add-custom-emote-name" placeholder="name" style="width:6em" oninput="this.title=`Name: ${this.value}`">
                     <input type="text" title="Custom emoji value" id="add-custom-emote-value" placeholder="value" style="width:auto" oninput="this.title=`Name: ${this.value}`">
                     <button class="editing-button" onclick="let name = document.getElementById('add-custom-emote-name'); let value = document.getElementById('add-custom-emote-value'); addCustomEmote(name.value, convert(value.value, cusotmMdChkbx, false)); alert(`Added: '${name.value}' that represents the emote: '${value.value}'`); name.value = ''; value.value = ''">Add emoji</button>
                 </label>
                 <span class="divider" dashed></span>
-                <label>Remove custom emoji <input type="text" title="Custom emoji name" id="remove-custom-emote" placeholder="name" style="width:6em"></label>
+                <label><input type="text" title="Custom emoji name" id="remove-custom-emote" placeholder="name" style="width:6em"></label>
                 <button class="editing-button" onclick="let inp = document.getElementById('remove-custom-emote'); removeCustomEmote(inp.value); removeCustomEmojiOption(); alert(`Removed: ${inp.value}`); inp.value = ''">Remove emoji</button>
                 <span class="divider"></span>
                 <label>Custom emojis</label>
@@ -384,6 +380,9 @@
                 </div>
             </label>
             <span class="divider"></span>
+            <input id="unicode-character-copy-area" value="&#12484;" type="text" style="width:1px;height:0;background-color: transparent;color: transparent;border-color: transparent;border-style: none;">
+                <label title="copy to clipboard"><input type="number" value="12484" oninput="document.getElementById('unicode-character').textContent = String.fromCodePoint(this.value)" style="width:90px" title="unicode character value"><label id="unicode-character" style="padding:5px;border:1px inset black;background-color:white;color:black;cursor: pointer;" onclick="let copyArea = document.getElementById('unicode-character-copy-area');copyArea.value=this.textContent;copyArea.select();document.execCommand('copy');">&#12484;</label></label>
+            <span class="divider"></span>
             <label>Includes</label>
             <select name="includes" id="includes" title="elements" oninput="addTextTypeInTextArea(`\\INCLUDE:${this.value}\\`)">
                 <optgroup label="Elements">
@@ -406,6 +405,9 @@
                 <option value="c-3d" title="(ctrl + shift + 1)">3d</option>
                 <option value="c-rainbow" title="(ctrl + shift + 2)">rainbow</option>
                 <option value="c-upsidedown" title="(ctrl + shift + 3)">upsidedown</option>
+                <option value="c-cursive">cursive</option>
+                <option value="c-midieval">midieval</option>
+                <option value="c-hollow">hollow</option>
                 <option value="c-circled" title="(ctrl + shift + 4)">circled</option>
                 <option value="c-unicode" title="(ctrl + shift + 5)">unicode</option>
                 <option value="c-choose items='item1|item2'" title="put $1 or {value} where you want the choice to go, (ctrl + shift + 6)">choose</span></option>
