--- a/Update.html
+++ b/Update.html
@@ -108,6 +108,7 @@
                     <c-hollow>text</c-hollow>
                 </li>
             </ul>
+            <li>...> and &lt;...</li>
         </ul>
     </div>
     <hr>
