--- a/Update.html
+++ b/Update.html
@@ -109,6 +109,7 @@
                 </li>
             </ul>
             <li>...> and &lt;...</li>
+            <li>Many new emoji shortcuts</li>
         </ul>
     </div>
     <hr>
