--- a/Update.html
+++ b/Update.html
@@ -111,6 +111,13 @@
             <li>...> and &lt;...</li>
             <li>Many new emoji shortcuts</li>
         </ul>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>\EMOJI\ is actually random</li>
+            <ul>
+                <li>However it does not pick from img emojis</li>
+            </ul>
+        </ul>
     </div>
     <hr>
     <br>
