--- a/Update.html
+++ b/Update.html
@@ -110,6 +110,8 @@
             </ul>
             <li>...> and &lt;...</li>
             <li>Many new emoji shortcuts</li>
+            <li>\emoji{amount}\</li>
+            <li>\emoji{amount seperator}\</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
