--- a/Update.html
+++ b/Update.html
@@ -112,6 +112,7 @@
             <li>Many new emoji shortcuts</li>
             <li>\emoji{amount}\</li>
             <li>\emoji{amount seperator}\</li>
+            <li>Code block highlighting</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
