--- a/Update.html
+++ b/Update.html
@@ -112,7 +112,8 @@
             <li>Many new emoji shortcuts</li>
             <li>\emoji{amount}\</li>
             <li>\emoji{amount seperator}\</li>
-            <li>Code block highlighting</li>
+            <li>Code block highlighting (must be included)</li>
+            <li>Code block line numbers (must be included)</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
