--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
                     <option value="SAMP" title="makes the samp element look like command line">samp</option>
                     <option value="HIGHLIGHT" title="syntax highlighting for code blocks">highlight</option>
                     <option value="L#" title="line numbers for code blocks">line numbers</option>
+                    <option value="LINECOLOR" title="css color previews for code blocks">color</option>
                 </optgroup>
             </select>
             <wbr>
