syntax highlight option

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <span class="divider"></span>
                 <label class="option-item"><input title="(F4)" type="checkbox" id="custom" checked>Custom markdown?</label>
                 <span class="divider" dashed></span><label for="" class="option-item"><input type="checkbox" id="mathjax" checked="checked" title="Use Mathjax (F9)">Mathjax?</label>
+                <label class="option-item"><input type="checkbox" id="syntax-parsing" checked>Syntax Highlighting?</label>
                 <span class="divider"></span>
                 <label class="option-item"><input type="checkbox" id="syncscrolling" onclick="SyncScrolling = !SyncScrolling">Sync Scrolling?</label>                    <span class="divider"></span>
                 <label class="option-item" style="cursor:help" title="stuff like the background color puts the value in the editor on update"><input type="checkbox" id="previews" checked="checked" onclick="Preview=!Preview">Previews?</label>
