--- a/Update.html
+++ b/Update.html
@@ -114,6 +114,7 @@
             <li>\emoji{amount seperator}\</li>
             <li>Code block highlighting (must be included)</li>
             <li>Code block line numbers (must be included)</li>
+            <li>CSS color previews (must be included)</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
