--- a/Update.html
+++ b/Update.html
@@ -118,10 +118,16 @@
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
-            <li>\EMOJI\ is actually random</li>
-            <ul>
-                <li>However it does not pick from img emojis</li>
-            </ul>
+            <li>\emoji\ is actually random</li>
+            <li>\emoji\ can also be \emoji{amount} and \emoji{amount seperator}</li>
+        </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>Custom emoji list loads when the page is loaded</li>
+        </ul>
+        <h3 class="removed">Removed</h3>
+        <ul>
+            <li>amount&lt;->letter spacing</li>
         </ul>
     </div>
     <hr>
