custom regular expressions

--- a/Update.html
+++ b/Update.html
@@ -115,6 +115,7 @@
             <li>Code block highlighting (must be included)</li>
             <li>Code block line numbers (must be included)</li>
             <li>CSS color previews (must be included)</li>
+            <li>Custom regular expression searches</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
