--- a/Update.html
+++ b/Update.html
@@ -129,6 +129,7 @@
         <h3 class="removed">Removed</h3>
         <ul>
             <li>amount&lt;->letter spacing</li>
+            <li>Old style of #[color]text|, f[font]text| and s[size]text|</li>
         </ul>
     </div>
     <hr>
