markers for summary

--- a/Update.html
+++ b/Update.html
@@ -130,6 +130,7 @@
         <ul>
             <li>amount&lt;->letter spacing</li>
             <li>Old style of #[color]text|, f[font]text| and s[size]text|</li>
+            <li>Meter and progress bar</li>
         </ul>
     </div>
     <hr>
