--- a/Emojis/index.html
+++ b/Emojis/index.html
@@ -57,6 +57,10 @@
             font-size:2.5em;
         }
     </style>
+    <title>Emojis</title>
+    <script>
+        document.querySelector("title").innerHTML = Object.values(EMOJIS)[Math.floor(Math.random() * Object.values(EMOJIS).length)] + " Emojis"
+    </script>
 </head>
 <body style="text-align: center;font-size:large;font-family:Arial, Helvetica, sans-serif">
     <input type="text" style="width:1px;background-color:transparent;color:transparent;z-index:-1;height:1px;z-index: -10;position:absolute;top:-100px" id="emoji-copy">
@@ -65,7 +69,6 @@
     <div style="text-align: center;">
         <h1>Use like this -> :shortcut:</h1>
     </div>
-    
     <div id="regular-emoji-shortcuts">
         <h1>Emojis</h1>
         <div class="emoji-container" id="regular-emoji-container"></div>
