removed c-time and c-unicode

--- a/Update.html
+++ b/Update.html
@@ -81,6 +81,9 @@
             </ul>
             <li><a href="#1.5">1.5</a></li>
             <li><a href="#1.6">1.6</a></li>
+            <ul>
+                <li><a href="#1.6.1">1.6.1</a></li>
+            </ul>
         </ul>
     </ul>
     </div>
@@ -88,6 +91,16 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.6.1">
+        <h2 class="version-num">1.6.1</h2>
+        <h3 class="removed">Removed</h3>
+        <ul>
+            <li>c-time</li>
+            <li>c-unicode</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.6">
         <h2 class="version-num">1.6</h2>
         <h3 class="added">Additions</h3>
