--- a/Update.html
+++ b/Update.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body style='background-color:#eeeeee'>
-    <div id="toc" style="position: fixed;overflow-y:auto;border:2px solid black;display: inline-block;height:99vh;padding:0;margin:0;padding-right:10px;top:1px;left:1px;background-color:linen;">
+    <div id="toc" style="resize:both;position: fixed;overflow-y:auto;border:2px solid black;display: inline-block;height:99vh;padding:0;margin:0;padding-right:10px;top:1px;left:1px;background-color:linen;">
     <h3><u>Versions</u></h3>
     <ul>
         <li><a href="#1.0.0">1.0.0</a></li>
@@ -93,6 +93,10 @@
     <hr>
     <div class="version-container" id="1.6.1">
         <h2 class="version-num">1.6.1</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>Auto tab</li>
+        </ul>
         <h3 class="removed">Removed</h3>
         <ul>
             <li>c-time</li>
