improvement to autotab system

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 <label class="option-item" style="cursor:help" title="stuff like the background color puts the value in the editor on update"><input type="checkbox" id="previews" checked="checked" onclick="Preview=!Preview">Previews?</label>
                 <span class="divider"></span>
                 <label class="option-item"><input type="checkbox" id="autocomplete-elements" onclick="AutoCompleteElements=!AutoCompleteElements">Autocomplete Elements?</label>
+                <span class="divider"></span>
                 <labal class="option-item"><input type="checkbox" name="auto-tab" id="auto-tab">Auto Tab?</labal>
             </fieldset>
         </div>
