--- a/Update.html
+++ b/Update.html
@@ -97,6 +97,10 @@
         <ul>
             <li>Auto tab</li>
         </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>Ctrl + number now goes to the right tab</li>
+        </ul>
         <h3 class="removed">Removed</h3>
         <ul>
             <li>c-time</li>
