--- a/index.html
+++ b/index.html
@@ -109,18 +109,19 @@
         </div>
         <div id="options" class="bar-section" style="text-align:right">
             <fieldset>
-                <label class="option-item"><input type="checkbox" id="live-interprate" checked onclick="InterprateLive=!InterprateLive" title="(F2)">Convert Live?</label>
+                <label class="option-item" title="Whether or not it should convert every time you change the input value"><input type="checkbox" id="live-interprate" checked onclick="InterprateLive=!InterprateLive" title="(F2)">Convert Live?</label>
                 <span class="divider"></span>
-                <label class="option-item"><input title="(F4)" type="checkbox" id="custom" checked>Custom markdown?</label>
-                <span class="divider" dashed></span><label for="" class="option-item"><input type="checkbox" id="mathjax" checked="checked" title="Use Mathjax (F9)">Mathjax?</label>
-                <label class="option-item"><input type="checkbox" id="syntax-parsing" checked>Syntax Highlighting?</label>
+                <label class="option-item" title="Whether or not to use the markdown i made, and you added"><input title="(F4)" type="checkbox" id="custom" checked>Custom markdown?</label>
+                <span class="divider" dashed></span>
+                <label for="" class="option-item" title="enables standard mathjax"><input type="checkbox" id="mathjax" checked="checked" title="Use Mathjax (F9)">Mathjax?</label>
+                <label class="option-item" title="When doing code blocks the code will be highlighted"><input type="checkbox" id="syntax-parsing" checked>Syntax Highlighting?</label>
                 <span class="divider"></span>
-                <label class="option-item"><input type="checkbox" id="syncscrolling" onclick="SyncScrolling = !SyncScrolling">Sync Scrolling?</label>                    <span class="divider"></span>
+                <label class="option-item" title="scrolling in the preview will scroll in the text editor and vice versa"><input type="checkbox" id="syncscrolling" onclick="SyncScrolling = !SyncScrolling">Sync Scrolling?</label>                    <span class="divider"></span>
                 <label class="option-item" style="cursor:help" title="stuff like the background color puts the value in the editor on update"><input type="checkbox" id="previews" checked="checked" onclick="Preview=!Preview">Previews?</label>
                 <span class="divider"></span>
-                <label class="option-item"><input type="checkbox" id="autocomplete-elements" onclick="AutoCompleteElements=!AutoCompleteElements">Autocomplete Elements?</label>
+                <label class="option-item" title="when typing an element, it will automatically close it"><input type="checkbox" id="autocomplete-elements" onclick="AutoCompleteElements=!AutoCompleteElements">Autocomplete Elements?</label>
                 <span class="divider"></span>
-                <labal class="option-item"><input type="checkbox" name="auto-tab" id="auto-tab">Auto Tab?</labal>
+                <labal class="option-item" title="when you press tab and go to a new line, it will automatically be tabbed over that much"><input type="checkbox" name="auto-tab" id="auto-tab">Auto Tab?</labal>
             </fieldset>
         </div>
         <div id="help" class="bar-section">
