--- a/Update.html
+++ b/Update.html
@@ -96,6 +96,7 @@
         <h3 class="added">Additions</h3>
         <ul>
             <li>Auto tab</li>
+            <li>Descriptions for each setting in options tab</li>
         </ul>
         <h3 class="fixed">Fixes</h3>
         <ul>
