--- a/Update.html
+++ b/Update.html
@@ -7,6 +7,9 @@
     <title>Update Log</title>
     <script src="./js/DOMElements.js"></script>
     <style>
+        :root{
+            --changed-color: #8da000;
+        }
         html{
             font-family: Arial, Helvetica, sans-serif;
         }
@@ -36,13 +39,26 @@
         }
         .changed{
             text-decoration: underline;
-            color:rgb(207, 207, 87);
+            color:var(--changed-color);
+        }
+        .quality-of-life{
+            color:limegreen;
+            text-decoration: underline dotted var(--changed-color);
         }
         #toc a:visited{
             color:blue;
         }
         #toc a:hover{
             color:green;
+        }
+        #toc ul li{
+            list-style-type: upper-alpha;
+        }
+        #toc ul ul li{
+            list-style-type:upper-roman;
+        }
+        #toc ul ul ul li{
+            list-style-type:lower-alpha;
         }
         #home-link{
             color:blue;
@@ -53,7 +69,7 @@
     </style>
 </head>
 <body style='background-color:#eeeeee'>
-    <div id="toc" style="resize:both;position: fixed;overflow-y:auto;border:2px solid black;display: inline-block;height:99vh;padding:0;margin:0;padding-right:10px;top:1px;left:1px;background-color:linen;">
+    <div id="toc" style="position: fixed;overflow-y:auto;border:2px solid black;display: inline-block;height:99vh;padding:0;margin:0;padding-right:10px;top:1px;left:1px;background-color:linen;">
     <h3><u>Versions</u></h3>
     <ul>
         <li><a href="#1.0.0">1.0.0</a></li>
@@ -97,6 +113,14 @@
         <ul>
             <li>Auto tab</li>
             <li>Descriptions for each setting in options tab</li>
+        </ul>
+        <h3 class="quality-of-life">Quality of life</h3>
+        <ul>
+            <li>Pressing enter for adding/removing custom regexes will perform the action</li>
+        </ul>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>List item markers on the update Table of Contents</li>
         </ul>
         <h3 class="fixed">Fixes</h3>
         <ul>
